--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,7 @@
     <string name="app_name">Lift Calculator</string>
 
     <string name="hello_world">Hello world!</string>
+    <string name="submit">Submit</string>
     <string name="action_settings">Settings</string>
+    <string name="weight_hint">Weight (Lbs)</string>
 </resources>
