--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="action_settings">Settings</string>
     <string name="weight_lbs">Weight (Lbs)</string>
     <string name="weight_kilos">Weight (Kilos)</string>
+    <string name="units">Units:</string>
+    <string name="bar_weight">Bar Weight:</string>
     <string-array name="region_select">
         <item>Lbs</item>
         <item>Kilos</item>
