--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Lift Calculator</string>
 
-    <string name="plates">Plates:</string>
+    <string name="plates">Plates (Click to Disable)</string>
     <string name="submit">Submit</string>
     <string name="action_settings">Settings</string>
     <string name="weight_lbs">Weight (Lbs)</string>
